# dol-login

./: .env.example  .envrc  .gitignore  README.md  build.sh  course_scraper.py  list_file.html  post_SAMLResponse.py  post_request.py  pyproject.toml  requirements.txt  response.html  roadmap.md  setup.py  start.sh  tempCodeRunnerFile.py  unitn_course_scraper.py
src/: main.py  unitn_courses_scraper.py
src/cli/: cli.py
src/login/: login.py  subscribe.py
src/utils/: utils.py
