[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name='unitn_course_scraper'
version='0.1.0'
authors=[
    { name="DISI Drive Team", email="unitndrive@gmail.com" }
]
description='Interactive scraper for your UniTN courses'
readme='README.md'
requires-python=">=3.7"
classifiers=["Programming Language :: Python :: 3.7",
                "Programming Language :: Python :: 3.8",
                "Programming Language :: Python :: 3.9",
                "Programming Language :: Python :: 3.10",
                "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
                "Operating System :: OS Independent",
                ]
keywords=['unitn', 'courses', 'scraper', '@unitn.it',
              'moodle', 'dol', 'gestionecorsi', 'didatticaonline']
dependencies=['python-dotenv >= 1.0.0', 'requests >= 2.28.2', 'grequests >= 0.6.0', 'beautifulsoup4 >= 4.12.2']